src/vm/snapshots/file@comments@line_at_eof.lox.snap
---
source: src/vm/tests.rs
description: "print \"ok\"; // expect: ok\n// comment"
input_file: test_files/comments/line_at_eof.lox
---
OUT: 
ok

===
ERR:
