src/vm/snapshots/file@comments@only_line_comment.lox.snap
---
source: src/vm/tests.rs
description: // comment
input_file: test_files/comments/only_line_comment.lox
---
OUT: 

===
ERR:
